Thêm crud công ty tiếp nhận

--- a/Vimas/Areas/HocVien/Views/QuaTrinhHocTap/Edit.cshtml
+++ b/Vimas/Areas/HocVien/Views/QuaTrinhHocTap/Edit.cshtml
@@ -60,7 +60,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Đóng</button>
-                <input type="button" id="btnSubmit" onclick="editQTHT()" value="Thêm" class="btn btn-primary" />
+                <input type="button" id="btnSubmit" onclick="editQTHT()" value="Lưu" class="btn btn-primary" />
             </div>
         </form>
     </div>
