--- a/Vimas/Views/Shared/_Layout.cshtml
+++ b/Vimas/Views/Shared/_Layout.cshtml
@@ -151,6 +151,9 @@
                         <a href="#"><i class="zmdi zmdi-globe"></i>Quản lý hệ thống</a>
                         <ul>
                             <li>
+                                <a href="@Url.Action("Index","CongTyTiepNhan", new { area = "HeThong" })"><i class="sub-menu zmdi zmdi-trending-up"></i> Danh sách công ty tiếp nhận</a>
+                            </li>
+                            <li>
                                 <a href="@Url.Action("Index","TaiKhoan", new { area = "Admin" })"><i class="sub-menu zmdi zmdi-trending-up"></i> Danh sách tài khoản</a>
                             </li>
                             <li>
