--- a/Vimas/Views/Shared/_Layout.cshtml
+++ b/Vimas/Views/Shared/_Layout.cshtml
@@ -251,6 +251,7 @@
     @*<script src="~/Content/plugins/bootstrap-select-1.10.0/dist/js/bootstrap-select.min.js"></script>*@
     @*<script src="~/Content/plugins/bootstrap-select/dist/js/bootstrap-select.js"></script>*@
     <script src="~/Content/plugins/select2-4.0.3/dist/js/select2.min.js"></script>
+    <script src="~/Scripts/accounting.min.js"></script>
 
     <script>
         $(document)
