--- a/Vimas/Areas/HocVien/Views/SucKhoe/Index.cshtml
+++ b/Vimas/Areas/HocVien/Views/SucKhoe/Index.cshtml
@@ -96,18 +96,19 @@
     }
 
     function Delete(id) {
-
-        $.ajax({
-            url: '@this.Url.Action("Delete")',
-            data: { id},
-            method: "POST",
-            success: function (result) {
-                alert(result.message);
-                window.location.href = "@this.Url.Action("Index")";
-            },
-            error: function (error) {
-                alert(error.message);
-            }
-        });
+        if (confirm("Bạn có chắc xóa dòng này?")) {
+            $.ajax({
+                url: '@this.Url.Action("Delete")',
+                data: { id},
+                        method: "POST",
+                        success: function (result) {
+                            alert(result.message);
+                            window.location.href = "@this.Url.Action("Index")";
+                        },
+                error: function (error) {
+                    alert(error.message);
+                }
+            });
+        }
     }
 </script>
