--- a/Vimas/Areas/HocVien/Views/KyTucXa/Create.cshtml
+++ b/Vimas/Areas/HocVien/Views/KyTucXa/Create.cshtml
@@ -55,7 +55,7 @@
                                 <label class="control-label col-md-5">Họ Tên</label>
                                 <div class="col-md-6">
                                     <div class="fg-line">
-                                        <input type="text" class="form-control" value="" />
+                                        @Html.DropDownListFor(q => q.IdThongTinCaNhan, this.Model.AvailableThongTinCaNhan, new { @class = "form-control", @id = "select2ThongTinCaNhan" })
                                     </div>
                                 </div>
                             </div>
@@ -118,8 +118,9 @@
                                 <label class="control-label col-md-5" for="NgayVao">Ngày vào<span style="color:red">*</span></label>
                                 <div class="col-md-6">
                                     <div class="fg-line">
-                                        <input class="form-control" id="NgayVao" type="text" value="" style="background-color:white" />
+                                        <input class="form-control" id="NgayVao" type="text" autocomplete="off" required value="" style="background-color:white" />
                                         <input type="hidden" name="NgayVao" required value="" />
+                                        @Html.ValidationMessageFor(q => q.NgayVao)
                                     </div>
                                 </div>
                             </div>
@@ -127,7 +128,7 @@
                                 <label class="control-label col-md-5" for="NgayRa">Ngày Ra</label>
                                 <div class="col-md-6">
                                     <div class="fg-line">
-                                        <input class="form-control" id="NgayRa" type="text" value="" style="background-color:white" />
+                                        <input class="form-control" id="NgayRa" type="text" autocomplete="off" value="" style="background-color:white" />
                                         <input type="hidden" name="NgayRa" value="" />
                                     </div>
                                 </div>
@@ -146,7 +147,6 @@
                                 <div class="col-md-6">
                                     <div class="fg-line">
                                         @Html.TextBoxFor(q => q.SoHocTuDo, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(q => q.SoHocTuDo)
                                     </div>
                                 </div>
                             </div>
@@ -181,6 +181,7 @@
                 event.preventDefault();
             });
         });
+        $('#select2ThongTinCaNhan').select2();
 
         // địa chỉ thường trú được ghép từ:
         // SoNha + PhuongXa + QuanHuyen + Tinh
