--- a/Vimas/Areas/HocVien/Views/KyTucXa/Edit.cshtml
+++ b/Vimas/Areas/HocVien/Views/KyTucXa/Edit.cshtml
@@ -149,8 +149,9 @@
                                 <label class="control-label col-md-5" for="NgayVao">Ngày vào<span style="color:red">*</span></label>
                                 <div class="col-md-6">
                                     <div class="fg-line">
-                                        <input class="form-control" id="NgayVao" type="text" value="" style="background-color:white" />
+                                        <input class="form-control" id="NgayVao" type="text" required autocomplete="off" value="" style="background-color:white" />
                                         <input type="hidden" name="NgayVao" required value="@this.Model.NgayVao" />
+                                        @Html.ValidationMessageFor(q => q.NgayVao)
                                     </div>
                                 </div>
                             </div>
@@ -158,7 +159,7 @@
                                 <label class="control-label col-md-5" for="NgayRa">Ngày Ra</label>
                                 <div class="col-md-6">
                                     <div class="fg-line">
-                                        <input class="form-control" id="NgayRa" type="text" value="" style="background-color:white" />
+                                        <input class="form-control" id="NgayRa" type="text" autocomplete="off" value="" style="background-color:white" />
                                         <input type="hidden" name="NgayRa" value="@this.Model.NgayRa" />
                                     </div>
                                 </div>
@@ -177,7 +178,6 @@
                                 <div class="col-md-6">
                                     <div class="fg-line">
                                         @Html.TextBoxFor(q => q.SoHocTuDo, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(q => q.SoHocTuDo)
                                     </div>
                                 </div>
                             </div>
