--- a/Vimas/Areas/HeThong/Views/NghiepDoan/Index.cshtml
+++ b/Vimas/Areas/HeThong/Views/NghiepDoan/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿
 @{
+    var user = HttpContext.Current.User;
     ViewBag.Title = "Danh sách nghiệp đoàn";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
@@ -10,11 +11,14 @@
             <div class="col-md-8">
                 <h3>Danh sách Nghiệp đoàn</h3>
             </div>
-            <div class="col-md-4">
-                <a href="@this.Url.Action("Create")" class="btn btn-primary pull-right ">
-                    <i class="left-icon glyphicon glyphicon-plus"></i>   Thêm nghiệp đoàn
-                </a>
-            </div>
+            @if (user.IsInRole("Admin") || user.IsInRole("PhongXKLD"))
+            { 
+                <div class="col-md-4">
+                    <a href="@this.Url.Action("Create")" class="btn btn-primary pull-right ">
+                        <i class="left-icon glyphicon glyphicon-plus"></i>   Thêm nghiệp đoàn
+                    </a>
+                </div>
+            }
         </div>
         <hr />
     </div>
@@ -87,10 +91,23 @@
                     "aTargets": [6],
                     "mRender": function (data, type, o) {
                         var data = o[6];
-                        var detail = "<a id='detailNghiepDoan' class='btn btn-sm btn-primary' href='@Url.Action("Detail", "NghiepDoan")\/" + data + "\'><i class='fa fa-eye'></i> Detail</a>";
-                        var del = "<a id='deleteNghiepDoan' class='btn btn-sm btn-danger' onClick='Delete("+data+")'><i class='glyphicon glyphicon-trash'></i> Delete</a>";
-                        var edit = "<a id='editNghiepDoan' class='btn btn-sm btn-primary' href='@Url.Action("Edit", "NghiepDoan")\/" + data + "\'><i class='glyphicon glyphicon-pencil'></i> Edit</a>";
-                        return detail +" "+edit +" "+ del;
+                        @if (user.IsInRole("Admin") || user.IsInRole("PhongXKLD"))
+                        {
+                            <text>
+                            var detail = "<a id='detailNghiepDoan' class='btn btn-sm btn-primary' href='@Url.Action("Detail", "NghiepDoan")\/" + data + "\'><i class='fa fa-eye'></i> Detail</a>";
+                            var del = "<a id='deleteNghiepDoan' class='btn btn-sm btn-danger' onClick='Delete(" + data + ")'><i class='glyphicon glyphicon-trash'></i> Delete</a>";
+                            var edit = "<a id='editNghiepDoan' class='btn btn-sm btn-primary' href='@Url.Action("Edit", "NghiepDoan")\/" + data + "\'><i class='glyphicon glyphicon-pencil'></i> Edit</a>";
+                            </text>
+                        }
+                        else
+                        {
+                            <text>
+                            var detail = "";
+                            var del = "";
+                            var edit = "";
+                            </text>
+                        }
+                        return detail + " " + edit + " " + del;
                     }
                 }
 
