--- a/Vimas/Areas/HeThong/Views/CongTyTiepNhan/Index.cshtml
+++ b/Vimas/Areas/HeThong/Views/CongTyTiepNhan/Index.cshtml
@@ -122,7 +122,7 @@
 
             ],
             "bAutoWidth": false
-        });
+        }).fnSetFilteringDelay(delaySearchDb);
     }
 
     function deleteCTTN(idCTTN) {
@@ -142,12 +142,6 @@
                 }
             });
         }
-    }
-
-    function RefreshTable(id) {
-        var oTable = $(id).dataTable();
-        oTable._fnPageChange(0);
-        oTable._fnAjaxUpdate();
     }
 
     function showCreateCTTN() {
