--- a/Vimas/Areas/HeThong/Views/TrungTamGTVL/Index.cshtml
+++ b/Vimas/Areas/HeThong/Views/TrungTamGTVL/Index.cshtml
@@ -96,7 +96,7 @@
 
             ],
             "bAutoWidth": false
-        });
+        }).fnSetFilteringDelay(delaySearchDb);
     }
 
     function Delete(id) {
