--- a/Vimas/Areas/HocVien/Views/QuaTrinhHocTap/Create.cshtml
+++ b/Vimas/Areas/HocVien/Views/QuaTrinhHocTap/Create.cshtml
@@ -16,7 +16,9 @@
             <div class="modal-body">
                 <div class="form-horizontal">
                     <div class="form-group">
-                        @Html.LabelFor(q => q.TenTruong, new { @class = "control-label col-md-4" })
+                        <div class="col-md-4">
+                            @Html.LabelFor(q => q.TenTruong, new { @class = "control-label" })<span style="color:red">*</span>
+                        </div>
                         <div class="col-md-5">
                             @Html.TextBoxFor(q => q.TenTruong, new { @class = "form-control col-sm-12" })
                             @Html.ValidationMessageFor(q => q.TenTruong)
@@ -86,7 +88,8 @@
                 success: function (result) {
                     alert(result.message);
                     $('#createQTHTPanel').modal('hide');
-                    RefreshQTHTTable();
+                    $('#createQTHTPanel').html("");
+                    RefreshTable('quaTrinhHocTapTable');
                 },
                 error: function (error) {
                     alert(result.message);
