--- a/Vimas/Areas/HocVien/Views/ThongTinNopTien/Index.cshtml
+++ b/Vimas/Areas/HocVien/Views/ThongTinNopTien/Index.cshtml
@@ -127,7 +127,7 @@
 
             ],
             "bAutoWidth": false
-        });
+        }).fnSetFilteringDelay(delaySearchDb);
     }
 
     function showCreateTTNT() {
