--- a/Vimas/Views/Shared/_Layout.cshtml
+++ b/Vimas/Views/Shared/_Layout.cshtml
@@ -252,6 +252,7 @@
     @*<script src="~/Content/plugins/bootstrap-select/dist/js/bootstrap-select.js"></script>*@
     <script src="~/Content/plugins/select2-4.0.3/dist/js/select2.min.js"></script>
     <script src="~/Scripts/accounting.min.js"></script>
+    <script src="~/Content/plugins/DataTables-1.10.12/fnSetFilteringDelay.js"></script>
 
     <script>
         $(document)
