--- a/Vimas/Areas/HeThong/Views/HopDongDOLAB/Index.cshtml
+++ b/Vimas/Areas/HeThong/Views/HopDongDOLAB/Index.cshtml
@@ -110,7 +110,7 @@
 
             ],
             "bAutoWidth": false
-        });
+        }).fnSetFilteringDelay(delaySearchDb);
     }
 
     function Delete(id) {
