--- a/Vimas/Areas/HeThong/Views/NghiepDoan/Index.cshtml
+++ b/Vimas/Areas/HeThong/Views/NghiepDoan/Index.cshtml
@@ -113,7 +113,7 @@
 
             ],
             "bAutoWidth": false
-        });
+        }).fnSetFilteringDelay(delaySearchDb);
     }
 
     function Delete(id) {
