--- a/Vimas/Areas/HocVien/Views/ThongTinCaNhan/Create.cshtml
+++ b/Vimas/Areas/HocVien/Views/ThongTinCaNhan/Create.cshtml
@@ -52,7 +52,7 @@
                         <hr />
                         <div class="border-all">
                             <div class="form-group first-row">
-                                <label class="control-label col-md-5" for="MaLuuHoSo">Mã lưu hồ sơ</label>
+                                <label class="control-label col-md-5" for="MaLuuHoSo">Mã lưu hồ sơ<span style="color:red">*</span></label>
                                 <div class="col-md-6">
                                     <div class="fg-line">
                                         @Html.TextBoxFor(q => q.MaLuuHoSo, new { @class = "form-control" })
@@ -106,7 +106,7 @@
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label class="control-label col-md-5" for="TrinhDoVanHoa">Trình độ văn hóa<span style="color:red">*</span></label>
+                                <label class="control-label col-md-5" for="TrinhDoVanHoa">Trình độ văn hóa</label>
                                 <div class="col-md-6">
                                     <div class="fg-line">
                                         @Html.EnumDropDownListFor(q => q.EducationLevel, new { @class = "form-control" })
