--- a/Vimas/Areas/HocVien/Views/ThongTinCaNhan/Edit.cshtml
+++ b/Vimas/Areas/HocVien/Views/ThongTinCaNhan/Edit.cshtml
@@ -48,7 +48,7 @@
                         <hr />
                         <div class="border-all">
                             <div class="form-group first-row">
-                                <label class="control-label col-md-5" for="MaLuuHoSo">Mã lưu hồ sơ</label>
+                                <label class="control-label col-md-5" for="MaLuuHoSo">Mã lưu hồ sơ<span style="color:red">*</span></label>
                                 <div class="col-md-6">
                                     <div class="fg-line">
                                         @Html.TextBoxFor(q => q.MaLuuHoSo, new { @class = "form-control" })
