--- a/Vimas/Areas/HocVien/Views/ThongTinGiaDinh/Edit.cshtml
+++ b/Vimas/Areas/HocVien/Views/ThongTinGiaDinh/Edit.cshtml
@@ -17,7 +17,9 @@
             <div class="modal-body">
                 <div class="form-horizontal">
                     <div class="form-group">
-                        @Html.LabelFor(q => q.HoTen, new { @class = "control-label col-md-4" })
+                        <div class="col-md-4">
+                            @Html.LabelFor(q => q.HoTen, new { @class = "control-label" })<span style="color:red">*</span>
+                        </div>
                         <div class="col-md-5">
                             @Html.TextBoxFor(q => q.HoTen, new { @class = "form-control col-sm-12" })
                             @Html.ValidationMessageFor(q => q.HoTen)
@@ -30,7 +32,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="control-label col-md-4" for="NgaySinh">Ngày Sinh<span style="color:red">*</span></label>
+                        <label class="control-label col-md-4" for="NgaySinh">Ngày Sinh</label>
                         <div class="col-md-5">
                             <input class="form-control default-cursor" id="NgaySinh" type="text" value="" readonly style="background-color:white" />
                             <input type="hidden" name="NgaySinh" value="@this.Model.NgaySinh" />
@@ -94,7 +96,8 @@
                 success: function (result) {
                     alert(result.message);
                     $('#editTTGDPanel').modal('hide');
-                    RefreshTTGDTable();
+                    $('#editTTGDPanel').html("");
+                    RefreshTable('thongTinGiaDinhTable');
                 },
                 error: function (error) {
                     alert(result.message);
