--- a/Vimas/Areas/HocVien/Views/ThongTinNopTien/Edit.cshtml
+++ b/Vimas/Areas/HocVien/Views/ThongTinNopTien/Edit.cshtml
@@ -109,6 +109,7 @@
                 success: function (result) {
                     alert(result.message);
                     $('#editTTNTPanel').modal('hide');
+                    $('#editTTNTPanel').html("");
                     RefreshTTNTTable();
                 },
                 error: function (error) {
@@ -121,7 +122,8 @@
     function initializeDateRangePicker() {
         moment.locale('vi');
         var now = moment().format("LL");
-        $('input[name="NgayLapPhieu"]').val('@this.Model.NgayLapPhieu.ToShortDateString()')
+        $('input[name="NgayLapPhieu"]').val('@this.Model.NgayLapPhieu.ToShortDateString()');
+        console.log('@this.Model.NgayLapPhieu.ToShortDateString()');
         $('#NgayLapPhieu').val(moment('@this.Model.NgayLapPhieu.ToShortDateString()', 'DD/MM/YYYY').format('LL'));
         $('#NgayLapPhieu').daterangepicker({
             singleDatePicker: true,
